Fixed an issue where the Ecommerce orders were not being processed, fixed an issue in ecommerce site where the script was not running and causing an issue and changed the cart to basket in all places Imported from Changeset 2342

--- a/WarehouseEcommerce/Areas/Shop/Views/Products/ProductCategories.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/ProductCategories.cshtml
@@ -182,7 +182,7 @@
                                     <div class="button-group">
                                          
                                         <a href="javascript:;" type="button" class="acart" onclick="AddToCart(@item.ProductId)">
-                                            <span>Add to Cart</span>
+                                            <span>Add to Basket</span>
                                         </a>
                                     </div>
                                 </div>
