--- a/WarehouseEcommerce/Areas/Shop/Views/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/ProductDetails.cshtml
@@ -91,7 +91,7 @@
                             </ul>
                             <hr class="hr-line">
 
-                            <button type="button" id="button-cart" class="btn add-to-cart btn-primary" onclick="AddToCart(@Model.ProductId)">Add to Cart</button>
+                            <button type="button" id="button-cart" class="btn add-to-cart btn-primary" onclick="AddToCart(@Model.ProductId)">Add to Basket</button>
                             <button type="button" data-toggle="tooltip" title="Add to Wish List" class="btn add-to-cart btn-primary pwishcom" onclick="wishlist.add('30');">
                                 <svg width="20px" height="20px">
                                     <use xlink:href="/Areas/Shop/Content/app/img/icons/icons.svg#wishlist"></use>
