--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_CartItemsPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_CartItemsPartial.cshtml
@@ -89,7 +89,7 @@
     }
     else
     {
-        <center><p><h4 style="text-align:center">Your shopping cart is empty!</h4></p></center>
+        <center><p><h4 style="text-align:center">Your Basket is empty!</h4></p></center>
         <div class="button-submit">
 
             <button type="Submit" name="submitNewsletter" class="btn btn-block" onclick="window.location.href='@Url.Action("Index", "Home")'">Back</button>
