--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_OnSalePartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_OnSalePartial.cshtml
@@ -60,7 +60,7 @@
                                             </div>
                                             <div class="button-group">
                                                 <button type="button" onclick="AddToCart(@product[i].ProductId)" class="acart">
-                                                    <span>Add to Cart</span>
+                                                    <span>Add to Basket</span>
                                                 </button>
                                             </div>
                                         </div>
@@ -113,7 +113,7 @@
                                             </div>
                                             <div class="button-group">
                                                 <button type="button" onclick="AddToCart(@product[i+1].ProductId)" class="acart">
-                                                    <span>Add to Cart</span>
+                                                    <span>Add to Basket</span>
                                                 </button>
                                             </div>
                                         </div>
