--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopHeaderPartial.cshtml
@@ -141,7 +141,7 @@
                                 else
                                 {
                                     <li>
-                                        <p class="text-center">Your shopping cart is empty!</p>
+                                        <p class="text-center">Your Basket is empty!</p>
                                     </li>
                                 }
                             </ul>
