--- a/WarehouseEcommerce/Areas/Shop/Views/Products/AddToCart.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/AddToCart.cshtml
@@ -10,7 +10,7 @@
                 <div class="col-md-12 col-sm-12 bg-white my-account login">
                     <div class="about-cnt">
                         <div class="content-wrapper select">
-                            <h2 class="text-uppercase">Cart</h2>
+                            <h2 class="text-uppercase">Basket</h2>
                             <hr />
                             <div id="updateCart">
                                 @Html.Action("_CartItemsPartial", "Products")
