--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_HorizontalNavbarPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_HorizontalNavbarPartial.cshtml
@@ -110,7 +110,7 @@
                         </button>
                         <ul class="dropdown-menu pull-right">
                             <li>
-                                <p class="text-center">Your shopping cart is empty!</p>
+                                <p class="text-center">Your Basket is empty!</p>
                             </li>
                         </ul>
                     </li>
