--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_SpecialProductPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_SpecialProductPartial.cshtml
@@ -52,7 +52,7 @@
                                     <div class="clearfix"></div>
                                     <div class="button-group">
                                         <button type="button" class="acart" onclick="AddToCart(@Model.productMasterList[i].ProductId)">
-                                            <span>Add to Cart</span>
+                                            <span>Add to Basket</span>
                                         </button>
                                     </div>
                                 </div>
@@ -88,7 +88,7 @@
                                     <div class="clearfix"></div>
                                     <div class="button-group">
                                         <button type="button" class="acart" onclick="AddToCart(@Model.productMasterList[i].ProductId)">
-                                            <span>Add to Cart</span>
+                                            <span>Add to Basket</span>
                                         </button>
                                     </div>
                                 </div>
@@ -124,7 +124,7 @@
                                     <div class="clearfix"></div>
                                     <div class="button-group">
                                         <button type="button" class="acart" onclick="AddToCart(@Model.productMasterList[i].ProductId)">
-                                            <span>Add to Cart</span>
+                                            <span>Add to Basket</span>
                                         </button>
                                     </div>
                                 </div>
