--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopProductPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopProductPartial.cshtml
@@ -64,7 +64,7 @@
                                         <div class="clearfix"></div>
                                         <div class="button-group">
                                             <button  type="button" class="acart" onclick="AddToCart(@item.ProductId)">
-                                                <span>Add to Cart</span>
+                                                <span>Add to Basket</span>
                                             </button>
                                         </div>
                                     </div>
