--- a/WMS/Views/Shared/ProductLargeDataComboBoxPartial.cshtml
+++ b/WMS/Views/Shared/ProductLargeDataComboBoxPartial.cshtml
@@ -4,7 +4,9 @@
 {
     settings.Name = "prdid";
     settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-    settings.Properties.DropDownWidth = System.Web.UI.WebControls.Unit.Percentage(100);
+    settings.Height = System.Web.UI.WebControls.Unit.Percentage(100);
+    //settings.Properties.DropDownWidth = System.Web.UI.WebControls.Unit.Percentage(100);
+    //settings.Properties.DropDownHeight = System.Web.UI.WebControls.Unit.Percentage(100);
     settings.Properties.DropDownStyle = DropDownStyle.DropDown;
     settings.CallbackRouteValues = new { Controller = "OrderDetail", Action = "ProductLargeDataComboBoxPartial" };
     settings.Properties.CallbackPageSize = 15;
