Inventory Type issue fixed in purchase orders + debuggers removed Imported from Changeset 2344

--- a/WMS/Views/TransferOrders/Create.cshtml
+++ b/WMS/Views/TransferOrders/Create.cshtml
@@ -45,7 +45,7 @@ else
 {
     @Html.AntiForgeryToken()
     @Html.Hidden("selkeyhdPrddet", 100);
-    @Html.HiddenFor(m => m.InventoryTransactionTypeId, new { id = "inverntoryType" });
+    @Html.HiddenFor(m => m.InventoryTransactionTypeId, new { id = "inventoryType" });
 
     <div class=" col-md-12 order-forms pull-left">
         @Html.ValidationSummary(true, "")
