--- a/WarehouseEcommerce/Areas/Shop/Views/Products/ProductCategories.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/ProductCategories.cshtml
@@ -7,10 +7,9 @@
 }
 
 
-
 <div id="product-search" class="container custom-max-width">
     <div class="row">
-        <div class="col-md-3 col-lg-2 col-sm-12">
+        <div class="col-md-3 col-sm-12">
             <div class="filters cat-filter">
                 <h2>Refined by</h2>
                 <button type="button" class="btn filterCollapse" data-toggle="collapse" data-target="#accordion">
@@ -65,18 +64,14 @@
                             </div>
                             <div id="collapseThree" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body">
-                                    <ul class="">
-                                        <li class="list-group-item"><a href="#">Cipherlab (1)</a></li>
-                                        <li class="list-group-item"><a href="#">Gemalto (3)</a></li>
-                                        <li class="list-group-item"><a href="#">HID Omnikey (1)</a></li>
-                                        <li class="list-group-item"><a href="#">iZettle (3)</a></li>
-                                        <li class="list-group-item"><a href="#">Omnikey (2)</a></li>
-                                        <li class="list-group-item"><a href="#">Payleven (1)</a></li>
-                                        <li class="list-group-item"><a href="#">PayPal Here (1)</a></li>
-                                        <li class="list-group-item"><a href="#">Unitech (1)</a></li>
-                                        <li class="list-group-item"><a href="#">Wasp Barcode (1)</a></li>
-                                        <li class="list-group-item"><a href="#">WorldPay (1)</a></li>
-
+                                    <ul class=" manufacturer-ul">
+                                        <li class="list-group-item" title="Cipherlab (1)"><input><a href="#">Cipherlab (1)</a></li>
+                                        <li class="list-group-item" title="Omnikey (2) rfgswaegwer sfdgbsdfbsdfbsdf"><input><a href="#">Omnikey (2) rfgswaegwer sfdgbsdfbsdfbsdf</a></li>
+                                        <li class="list-group-item" title="Payleven (1) fedswagrgv"><input><a href="#">Payleven (1) fedswagrgv</a></li>
+                                        <li class="list-group-item" title="PayPal Here (1) urhfpui oasidu"><input><a href="#">PayPal Here (1) urhfpui oasidu</a></li>
+                                        <li class="list-group-item" title="Unitech (1) ksjudf oresduhbo"><input><a href="#">Unitech (1) ksjudf oresduhbo</a></li>
+                                        <li class="list-group-item" title="Wasp Barcode (1) verfgwheripuh jklb"><input><a href="#">Wasp Barcode (1) verfgwheripuh jklb</a></li>
+                                        <li class="list-group-item" title=""><input><a href="#">WorldPay (1)</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -86,7 +81,7 @@
 
             </div>
         </div>
-        <div id="content" class="col-md-9 col-lg-10 col-sm-12">
+        <div id="content" class="col-md-9 col-sm-12">
             <ul class="breadcrumb">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Special Offers</a></li>
