--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_HorizontalNavbarPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_HorizontalNavbarPartial.cshtml
@@ -2,7 +2,7 @@
 
 <div class="headerMenu row">
     @*<div class="col-md-3 col-sm-4 stmenu"></div>*@
-    <div id="menu1" class="col-md-9 col-sm-8 stme2 nav-menue">
+    <div id="menu1" class="col-md-12 stme2 nav-menue">
 
         <div class="manun">
             <ul class="list-inline">
@@ -72,7 +72,7 @@
             </div>
         </div>
         <div class="col-xs-5 ">
-            <div id="top-links-menu" class="text-right top-menu-links col-sm-2 col-lg-2">
+            <div id="top-links-menu" class="text-right top-menu-links col-sm-12 col-lg-2">
                 <ul class="list-inline">
                     <li class="dropdown user_menu">
                         <a href="#" title="@(ViewBag.UserName == " " ? "My Account" : ViewBag.UserName)" class="dropdown-toggle" data-toggle="dropdown">
