--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopProductPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopProductPartial.cshtml
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-md-12">
         <div class="tabpro">
-            <div class="tab-head xs-tab">
+            <div class="tab-head xs-tab top-product-h1">
                 <h1 class="pull-left mb-25">
                     <span>
                         top product
