--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_Layout.cshtml
@@ -146,9 +146,9 @@
         { widgetcode: "082929f0048de095abde931cb153e076df2700d430dbecb2d6ce1ea29d3bd2f88cb9ddbeff8957905285212e1a49dd9e", values: {}, ready: function () { } };
     var d = document; s = d.createElement("script"); s.type = "text/javascript"; s.id = "zsiqscript"; s.defer = true;
     s.src = "https://salesiq.zoho.eu/widget"; t = d.getElementsByTagName("script")[0]; t.parentNode.insertBefore(s, t); d.write("<div id='zsiqwidget'></div>");
-</script>
-<script>
+</script>*@
+
     $(document).ready(function () {
         $('[data-toggle="tooltip"]').tooltip();
-    });*@
+    });
 </script>
