--- a/WMS/Views/ProductCategories/_ProductCategoriesList.cshtml
+++ b/WMS/Views/ProductCategories/_ProductCategoriesList.cshtml
@@ -29,7 +29,7 @@
 
         settings.Columns.Add(c =>
         {
-            c.FieldName = "ProductGroupId";
+            c.FieldName = "ProductGroups.ProductCategoryName";
             c.Caption = "Product Group";
             c.Settings.AutoFilterCondition = AutoFilterCondition.Equals;
         });
