Added Product category and fixed some bugs in it Imported from Changeset 2351

--- a/WMS/Views/Products/_ProductList.cshtml
+++ b/WMS/Views/Products/_ProductList.cshtml
@@ -85,6 +85,12 @@
         });
         settings.Columns.Add(c =>
         {
+            c.FieldName = "ProductCategoryName";
+            c.Caption = "Category";
+            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+        });
+        settings.Columns.Add(c =>
+        {
             c.FieldName = "DepartmentName";
             c.Caption = "Department";
             c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
