--- a/WMS/Views/Products/Create.cshtml
+++ b/WMS/Views/Products/Create.cshtml
@@ -305,8 +305,8 @@
 
     </div>
     <div class="col-md-6 pull-left">
-      
-      
+
+
         <div class="input-group h-100 justify-content-center align-items-center">
             @Html.LabelFor(model => model.EnableTax, htmlAttributes: new { @class = "col-md-4" })
             <div class="col-md-8">
@@ -565,6 +565,14 @@
                 </div>
                 <div class="col-1 p-0 pull-left">
                     <input type="button" onclick="showproductgrouppopup()" id="ProdGroupAdd" class="btn btn-primary" value="+">
+                </div>
+            </div>
+        </div>
+        <div class="input-group h-100 justify-content-center align-items-center">
+            @Html.LabelFor(m => m.ProductCategoryId, htmlAttributes: new { @class = "col-md-4" })
+            <div class="col-md-8">
+                <div class="col-11 p-0 mt-1 pull-left">
+                    @Html.DropDownListFor(m => m.ProductCategoryId, ViewBag.Category as SelectList, "Select Product Category", new {@id = "drpPC", @class = "chosen-select" })
                 </div>
             </div>
         </div>
