--- a/WMS/Views/Products/Edit.cshtml
+++ b/WMS/Views/Products/Edit.cshtml
@@ -384,7 +384,7 @@
                 }
             </div>
             <div class="col-md-6 pull-left">
-           
+
                 <div class="input-group h-100 justify-content-center align-items-center">
                     @Html.LabelFor(model => model.OnSaleProduct, htmlAttributes: new { @class = "col-md-4" })
                     <div class="col-md-8">
@@ -674,6 +674,14 @@ settings =>
                     </div>
                 </div>
 
+                <div class="input-group h-100 justify-content-center align-items-center">
+                    @Html.LabelFor(m => m.ProductCategoryId, htmlAttributes: new { @class = "col-md-4" })
+                    <div class="col-md-8">
+                        <div class="col-11 p-0 mt-1 pull-left">
+                            @Html.DropDownListFor(m => m.ProductCategoryId, ViewBag.Category as SelectList, "Select Product Category", new { @id = "drpPC", @class = "chosen-select" })
+                        </div>
+                    </div>
+                </div>
                 <div class="input-group h-100 justify-content-center align-items-center">
                     @Html.Label("Product Locations", htmlAttributes: new { @class = "col-md-4" })
                     <div class="col-md-8">
