--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_SliderPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_SliderPartial.cshtml
@@ -10,32 +10,32 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img src="~/Areas/Shop/Content/app/img/slider/1.png" alt="MacBookAir" class="img-responsive" />
+                <img src="~/Areas/Shop/Content/app/img/slider/SliderImage.png" alt="MacBookAir" class="img-responsive" />
                 <div class="carousel-caption">
                 </div>
             </div>
-            <div class="item">
-                <img src="~/Areas/Shop/Content/app/img/slider/1.jpg" alt="MacBookAir" class="img-responsive" />
-                <div class="carousel-caption">
-                </div>
+            @*<div class="item">
+            <img src="~/Areas/Shop/Content/app/img/slider/1.jpg" alt="MacBookAir" class="img-responsive" />
+            <div class="carousel-caption">
             </div>
-            <div class="item">
-                <img src="~/Areas/Shop/Content/app/img/slider/4.jpg" alt="MacBookAir" class="img-responsive" />
-                <div class="carousel-caption">
-                </div>
+        </div>
+        <div class="item">
+            <img src="~/Areas/Shop/Content/app/img/slider/4.jpg" alt="MacBookAir" class="img-responsive" />
+            <div class="carousel-caption">
             </div>
+        </div>*@
 
         </div>
 
         <!-- Controls -->
-        <a class="left carousel-control custom-carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+        @*<a class="left carousel-control custom-carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
         <a class="right carousel-control custom-carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
-        </a>
+        </a>*@
     </div>
    
 
