--- a/WarehouseEcommerce/Areas/Shop/Views/Products/AddToCart.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/AddToCart.cshtml
@@ -10,13 +10,10 @@
                 <div class="col-md-12 col-sm-12 bg-white my-account login">
                     <div class="about-cnt">
                         <div class="content-wrapper select">
-                            <h2 class="text-uppercase">Basket</h2>
-                            <hr />
+                            <h2 class="text-uppercase mb-15">Shopping Basket</h2>
                             <div id="updateCart">
                                 @Html.Action("_CartItemsPartial", "Products")
                             </div>
-                            
-                           
                         </div>
                     </div>
                 </div>
