--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_CartItemsPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_CartItemsPartial.cshtml
@@ -7,10 +7,8 @@
             <div class="cartitem-imgtext ">
                 <div class="cartitem-img">
                     <a href="">
-                        @* <img src="@(!string.IsNullOrEmpty(item.ProductMaster.DefaultImage)? ViewBag.BaseFilePath + item.ProductMaster.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")">*@
+                         <img src="@(!string.IsNullOrEmpty(item.ProductMaster.DefaultImage)? ViewBag.BaseFilePath + item.ProductMaster.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")">
                         @*<img src="@(!string.IsNullOrEmpty(item.ProductMaster.DefaultImage)? ViewBag.BaseFilePath + item.ProductMaster.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="@(item?.ProductMaster?.Name)">*@
-                        <img src="~/Areas/Shop/Content/app/img/product/no_image.gif">
-
                     </a>
                 </div>
                 <div class="cartitem-text">
@@ -21,7 +19,7 @@
                     <p><b>Size:</b> <span>M</span></p>
                     @if (ViewBag.CartModal == null)
                     {
-                        <p style="margin-top:-3px">
+                        <p class="cart-quantity">
                             <b>Quantity:</b> <input type="number" min="0" placeholder="Qty" onchange="UpdateCartItem(@item.ProductId,this)" value="@item.Qty" />
                             <a href="javascript:;" class="remove-btn cart-del" onclick="RemoveCartItem(@item.ProductId)"><i class="fa fa-trash-o" aria-hidden="true"></i> Delete</a>
                         </p>
