--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopCategoryPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopCategoryPartial.cshtml
@@ -12,7 +12,7 @@
             <span id="show-hidden-menu" class="collapsed toggle" data-toggle="collapse" data-target="#showme"></span>
         </div>
 
-        <div id="showme" class="hidden-menu" aria-expanded="true" style="display: none;">
+        <div id="showme" class="hidden-menu cat-list" aria-expanded="true" style="display: none;">
             <ul>
                 @if (Model != null)
                 {
