--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_FooterPartialArea.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_FooterPartialArea.cshtml
@@ -1,16 +1,15 @@
 ﻿@model List<Ganedata.Core.Entities.Domain.ProductManufacturer>
 
-<footer class="footer-class">
+<footer>
     <div>
         <div class="container logo-slider">
-            @*<div id="carousel0" class="owl-carousel owl-theme">*@
                 @foreach (var item in Model)
                 {
 
                     <a href=""><img src="@(!string.IsNullOrEmpty(item.ImagePath)? ViewBag.BaseFilePath + item.ImagePath : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="" class="img-responsive"> </a>
                  
                 }
-            @*</div>*@
+            
         </div>
         <hr class="footer-hr">
     </div>
